--- a/.github/workflows/top-issues-dashboard.yml
+++ b/.github/workflows/top-issues-dashboard.yml
@@ -10,6 +10,7 @@ jobs:
     steps:
       - name: Run top issues action
         uses: rickstaa/top-issues-action@v1
+        continue-on-error: true
         env:
           github_token: ${{ secrets.GITHUB_TOKEN }}
         with:
